--- a/P0/1.html
+++ b/P0/1.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="1.html">Home</a></li>
                 <li><a href="2.html">Faculty</a></li>
-                <li><a href="3.html">Placements</a></li>
+                <li><a href="Placements.html">Placements</a></li>
                 <li><a href="4.html">About</a></li>
             </ul>
         </div>
